log
Mon 06 May 2024 09:34:12 PM UTC: 
 tests:  1|8
total_score: 0/70
f6e67fb
Wed 08 May 2024 05:51:03 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
acfe7f3
Wed 08 May 2024 06:00:28 PM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  11|6
total_score: 15/70
9d57bb2
Wed 08 May 2024 06:05:03 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ac292be
Wed 08 May 2024 06:07:16 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
cd72a90
Wed 08 May 2024 06:09:18 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  12|6
total_score: 15/70
f3e2bba
Wed 08 May 2024 06:10:22 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
4455586
Wed 08 May 2024 06:14:31 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
53a8b47
Wed 08 May 2024 06:15:18 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
a79e3e7
Wed 08 May 2024 06:19:08 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:21: error: ‘tree’ undeclared (first use in this function); did you mean ‘free’?
   93 |     if(x == NULL || tree->root == NULL) return NULL;
      |                     ^~~~
      |                     free
treemap.c:93:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fc3026c
Wed 08 May 2024 06:20:20 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:21: error: ‘tree’ undeclared (first use in this function); did you mean ‘free’?
   93 |     if(x == NULL || tree->root == NULL) return NULL;
      |                     ^~~~
      |                     free
treemap.c:93:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0a5eef6
Wed 08 May 2024 06:20:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:22: error: ‘TreeNode’ has no member named ‘root’
   93 |     if(x == NULL || x->root == NULL) return NULL;
      |                      ^~
Compilation failed
54354ff
